--- a/pages/673.html
+++ b/pages/673.html
@@ -11,7 +11,7 @@
 
 
   <link href="/stylesheets/instiki.css?1534097725" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/mathematics.css?1534279987" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/mathematics.css?1534319116" media="all" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 {
@@ -309,7 +309,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <div style='float: right; margin: 0 20px 10px 20px;'><img alt='David Roberts speaking at Herriot-Watt, June 2014' border='1' height='225' src='https://ncatlab.org/nlab/files/DavidRoberts2014.jpg' title='Speaking at Herriot-Watt, June 2014' width='225'/></div>
+    <div style='float: right; margin: 0 20px 10px 20px;'><img alt='David Roberts speaking at Herriot-Watt, June 2014' border='1' height='225' src='https://ncatlab.org/nlab/files/DavidRoberts2014.jpg' title='Speaking at Herriot-Watt, June 2014' width='225'/></div>
 <p>I am currently a Research Associate (that is, a postdoc) at the <a href='http://www.iga.adelaide.edu.au/'>Institute for Geometry and its Applications</a> in the <a href='http://maths.adelaide.edu.au/'>School of Mathematical Sciences</a> at the University of Adelaide.</p>
 
 <p>I work on <a class='existingWikiWord' href='/nlab/show/bundle+gerbes'>bundle gerbes</a>, <a class='existingWikiWord' href='/nlab/show/principal+2-bundles'>2-bundles</a>, <a class='existingWikiWord' href='/nlab/show/geometric+stacks'>geometric stacks</a> and <a class='existingWikiWord' href='/nlab/show/internal+category'>internal groupoids and categories</a>, and <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> more generally with a side interest in <a class='existingWikiWord' href='/nlab/show/foundations'>foundations</a>. I have a particular interest in constructing examples in (low-dimensional) <a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>.</p>
@@ -326,7 +326,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>The construction of formal anafunctors</em> (2018), arXiv:<a href='https://arxiv.org/abs/1808.04552'>1808.04552</a> doi:<a href='https://doi.org/10.25909/5b6cfd1a73e55'>10.25909/5b6cfd1a73e55</a></p>
+<p><em>The construction of formal anafunctors</em> (2018), arXiv:<a href='https://arxiv.org/abs/1808.04552'>1808.04552</a> doi:<a href='https://doi.org/10.25909/5b6cfd1a73e55'>10.25909/5b6cfd1a73e55</a> (Note that this was cited in <em>Internal Categories, Anafunctors and Localisations</em> with the title <em>Strict 2-sites, J-spans and Localisations</em>, and some paper containing these notes may yet have that title)</p>
 </li>
 
 <li>
@@ -363,7 +363,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><em>On certain 2-categories admitting localisation by bicategories of fractions</em>, <a href='https://link.springer.com/journal/10485'>Applied Categorical Structures</a> Volume 24, Issue 4 (2016) pp 373-384, doi:<a href='http://dx.doi.org/10.1007/s10485-015-9400-4'>10.1007/s10485-015-9400-4</a>, <a href='http://arxiv.org/abs/1402.7108'>arXiv:1402.7108</a>.</p>
+<p><em>On certain 2-categories admitting localisation by bicategories of fractions</em>, <a href='https://link.springer.com/journal/10485'>Applied Categorical Structures</a> Volume 24, Issue 4 (2016) pp 373-384, doi:<a href='http://dx.doi.org/10.1007/s10485-015-9400-4'>10.1007/s10485-015-9400-4</a>, <a href='https://rdcu.be/5uvT'>ReadCube</a>, <a href='http://arxiv.org/abs/1402.7108'>arXiv:1402.7108</a>.</p>
 </li>
 
 <li>
@@ -407,7 +407,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_9d7af6efcf53e933f4adfcd4d6aafe6da734ee91_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_e42fec58b72b0b3e930f0eb381e45921453db66a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -525,14 +525,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 14, 2018 at 20:24:04.
+  Last revised on September  3, 2018 at 00:28:50.
   See the <a href="https://ncatlab.org/nlab/history/David Roberts" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/158" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(158 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/159" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(159 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/David Roberts/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
