--- a/pages/19630.html
+++ b/pages/19630.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Berry&#39;s phase in nLab
+      Michael Berry in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Berry&#39;s phase
+      Michael Berry
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1678/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8921/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,92 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#references'>References</a></li>
+    <ul>
+<li><a href='https://en.wikipedia.org/wiki/Michael_Berry_(physicist'>Wikipedia entry</a>)</li>
 </ul>
-</div>
 
-<h2 id='idea'>Idea</h2>
-
-<p><strong>Berry’s geometric phase</strong> is a correction to the wave function arising in the study of adiabatic quantum systems; it has been discovered by M. V. Berry. There are analogous effects for other <a class='existingWikiWord' href='/nlab/show/wave'>wave</a> phenomena; there has been also much earlier work of Pancharatnam on the related phenomenon in optics. The origin of the Berry’s phase is in nonflatness of a <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> which appears in the corresponding phase factors.</p>
-
-<h2 id='references'>References</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_5ea456c74a91ccad7e4997ad18f5e993873d7301_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Michael+Berry'>Michael Berry</a>, <em>Quantal phase factors accompanying adiabatic changes</em>, Proc. Roy. Soc. London Ser. A 392 (1984), no. 1802, 45–57, <a href='http://dx.doi.org/10.1098/rspa.1984.0023'>doi</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Berry+phase'>Berry phase</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Michael+Berry'>Michael Berry</a>, <em>The quantum phase, five years after</em>, in: Geometric phases in physics, 7–28, Adv. Ser. Math. Phys., 5, World Sci. Publ., Teaneck, NJ, 1989.</p>
-</li>
-
-<li>
-<p>Barry Simon, <em>Holonomy, the quantum adiabatic theorem, and Berry’s phase</em>, Phys. Rev. Lett. <strong>51</strong> (1983), no. 24, 2167–2170, <a href='http://www.ams.org/mathscinet-getitem?mr85e:81024'>MR85e:81024</a></p>
-</li>
-
-<li>
-<p>J. M. Robbins, <a class='existingWikiWord' href='/nlab/show/Michael+Berry'>Michael Berry</a>, <em>The geometric phase for chaotic systems</em>, Proc. Roy. Soc. London Ser. A 436 (1992), no. 1898, 631–661, <a href='http://dx.doi.org/10.1098/rspa.1992.0039'>doi</a>, <a href='http://www.ams.org/mathscinet-getitem?mr=94a:81036'>94a:81036</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/V.+I.+Arnold'>V. I. Arnold</a>, <em>Remarks on eigenvalues and eigenvectors of Hermitian matrices, Berry phase, adiabatic connections and quantum Hall effect</em>,</p>
-
-<p>Selecta Mathematica <strong>1</strong>:1, 1–19 (1995) <a href='http://dx.doi.org/10.1007/BF01614072'>doi</a></p>
-</li>
-
-<li>
-<p>Dariusz Chruściński, Andrzej Jamioƚkowski, <em>Geometric phases in classical and quantum mechanics</em>, Progress in Math. Physics <strong>36</strong>, Birkhäuser 2004. xiv+333 pp. ISBN: 0-8176-4282-X</p>
-</li>
-
-<li>
-<p>D. Rohrlich, <em>Berry’s phase</em>, entry in <em>Compendium of Quantum Physics: Concepts, Experiments, History and Philosophy</em>, ed. F. Weinert, K. Hentschel, D. Greenberger and B. Falkenburg (Springer), to appear; <a href='http://arxiv.org/abs/0708.3749'>arxiv/0708.3749</a></p>
-</li>
-
-<li>
-<p>wikipedia: <a href='http://en.wikipedia.org/wiki/Geometric_phase'>geometric phase</a></p>
-</li>
-
-<li>
-<p>&lt;http://www.mi.infm.it/manini/berryphase.html&gt;</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Frank+Wilczek'>Frank Wilczek</a>, Alfred Shapere, <em>Geometric phases in physics</em>, World Scientific, 1989</p>
-</li>
-
-<li>
-<p>M. O. Katanaev, <em>On geometric interpretation of the Berry phase</em>, Rus. Phys. J. 54(2012)1082–1092, Izv. VUZov. Fizika 10(2011) 26–35 <a href='http://arxiv.org/abs/1212.1782'>arxiv/1212.1782</a></p>
-</li>
-
-<li>
-<p>Maxim Braverman, <em>The Berry phase and the phase of the determinant</em>, <a href='http://arxiv.org/abs/1310.6332'>arxiv/1310.6332</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/asymptotic+series'>asymptotic series</a></p>
 </li>
 </ul>
-<div class='property'>category: <a class='category_link' href='/nlab/all_pages/physics'>physics</a></div>
+<div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September  3, 2018 at 02:21:02.
-  See the <a href="https://ncatlab.org/nlab/history/Berry&#39;s phase" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September  3, 2018 at 02:19:55.
+  See the <a href="https://ncatlab.org/nlab/history/Michael Berry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Berry%27s+phase" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Berry%27s+phase/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Berry%27s+phase" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Berry%27s+phase" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Berry&#39;s phase/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Michael+Berry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Michael Berry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Berry%27s+phase" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Michael+Berry" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Berry%27s+phase" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Michael+Berry" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Berry%27s+phase" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Michael+Berry" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
