--- a/pages/2943.html
+++ b/pages/2943.html
@@ -1020,7 +1020,7 @@ margin-left: 0em;
 
 <p>It is practically impossible to model a macroscopic system in terms of the microscopic kinematical and dynamical variables of all its particles. Thus one makes a hierarchical reduction in which this complexity is reduced to small number of collective variables. The theoretical framework for such reductions for systems is <a class='existingWikiWord' href='/nlab/show/statistical+mechanics'>statistical mechanics</a> or statistical physics.</p>
 
-<p>One special case of hierarchical reduction is the limit of large volumes <math class='maruku-mathml' display='inline' id='mathml_527cb29d4a13d378db43731fc8a9f8f5630ce233_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>, in which the number of particles (of each species) per volume, <math class='maruku-mathml' display='inline' id='mathml_527cb29d4a13d378db43731fc8a9f8f5630ce233_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo stretchy='false'>/</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>N/V</annotation></semantics></math>, stays constant. This is called the <strong><a class='existingWikiWord' href='/nlab/show/thermodynamic+limit'>thermodynamic limit</a></strong> in statistical physics. Under some standard assumptions like homogeneity (spacial and possibly directional) and stability (no transitory effects), there is a small number of collective variables characterizing the system. Such a description can be (and historically was) postulated as an independent self-consistent phenomenological theory even without going into the details of statistical mechanics; such a description is called <strong><a class='existingWikiWord' href='/nlab/show/equilibrium'>equilibrium</a> thermodynamics</strong>, which is believed to be deducible from statistical mechanics, as has been partially proved for some classes of systems. Sometimes transitional finite-time phenomena are described either statistically by studying stochastic processes or by a more elaborate hierarchical form of thermodynamics, so-called <strong>nonequilibrium thermodynamics</strong>.</p>
+<p>One special case of hierarchical reduction is the limit of large volumes <math class='maruku-mathml' display='inline' id='mathml_594f30981a5d1d0f0e12a85c12c460e6ab2d58c9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>, in which the number of particles (of each species) per volume, <math class='maruku-mathml' display='inline' id='mathml_594f30981a5d1d0f0e12a85c12c460e6ab2d58c9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo stretchy='false'>/</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>N/V</annotation></semantics></math>, stays constant. This is called the <strong><a class='existingWikiWord' href='/nlab/show/thermodynamic+limit'>thermodynamic limit</a></strong> in statistical physics. Under some standard assumptions like homogeneity (spacial and possibly directional) and stability (no transitory effects), there is a small number of collective variables characterizing the system. Such a description can be (and historically was) postulated as an independent self-consistent phenomenological theory even without going into the details of statistical mechanics; such a description is called <strong><a class='existingWikiWord' href='/nlab/show/equilibrium'>equilibrium</a> thermodynamics</strong>, which is believed to be deducible from statistical mechanics, as has been partially proved for some classes of systems. Sometimes transitional finite-time phenomena are described either statistically by studying stochastic processes or by a more elaborate hierarchical form of thermodynamics, so-called <strong>nonequilibrium thermodynamics</strong>.</p>
 
 <p>One of the basic characteristics of a thermodynamical system is its <a class='existingWikiWord' href='/nlab/show/temperature'>temperature</a>, which has no analogue in fundamental non-statistical physics. Other common thermodynamical variables include pressure, volume, <a class='existingWikiWord' href='/nlab/show/entropy'>entropy</a>, enthalpy etc.</p>
 
@@ -1128,6 +1128,10 @@ margin-left: 0em;
 <li>
 <p>Sean A. Hayward, <em>Relativistic thermodynamics</em> (<a href='https://arxiv.org/abs/gr-qc/9803007'>arXiv:gr-qc/9803007</a>)</p>
 </li>
+
+<li>
+<p>Paul Frampton, Stephen D.H. Hsu, Thomas W. Kephart, David Reeb, <em>What is the entropy of the universe?</em>, Class. Quant. Grav.26:145005, 2009 (<a href='https://arxiv.org/abs/0801.1847'>arXiv:0801.1847</a>)</p>
+</li>
 </ul>
 
 <h3 id='further_generalizations'>Further generalizations</h3>
@@ -1149,14 +1153,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  2, 2018 at 18:03:39.
+  Last revised on September  3, 2018 at 02:43:52.
   See the <a href="https://ncatlab.org/nlab/history/thermodynamics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/thermodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/thermodynamics/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/thermodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/thermodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/thermodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/thermodynamics/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/thermodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/thermodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/thermodynamics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
