--- a/pages/17150.html
+++ b/pages/17150.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8916/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8916/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -554,15 +554,21 @@ margin-left: 0em;
 
 <p>on <a class='existingWikiWord' href='/nlab/show/global+equivariant+stable+homotopy+theory'>global equivariant stable homotopy theory</a> in terms of <a class='existingWikiWord' href='/nlab/show/orthogonal+spectra'>orthogonal spectra</a>.</p>
 
-<p>(The reader interested only in plain <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a> takes the collection <math class='maruku-mathml' display='inline' id='mathml_add84130bd63778db252d95a9b48da91a054028f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℱ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{F}</annotation></semantics></math> of groups on p. viii to be trivial throughout, to get just the theory of non-equivariant <a class='existingWikiWord' href='/nlab/show/orthogonal+spectra'>orthogonal spectra</a>. See also the Schwede’s lecture notes on <em><a class='existingWikiWord' href='/nlab/show/Symmetric+spectra'>Symmetric spectra</a></em>.)</p>
+<p>(The reader interested only in plain <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a> takes the collection <math class='maruku-mathml' display='inline' id='mathml_2c2af7032804e906b282223d56b754fa2b979d11_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℱ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{F}</annotation></semantics></math> of groups on p. viii to be trivial throughout, to get just the theory of non-equivariant <a class='existingWikiWord' href='/nlab/show/orthogonal+spectra'>orthogonal spectra</a>. See also the Schwede’s lecture notes on <em><a class='existingWikiWord' href='/nlab/show/Symmetric+spectra'>Symmetric spectra</a></em>.)</p>
 
-<p>See also</p>
+<h2 id='related_texts'>Related texts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Stefan+Schwede'>Stefan Schwede</a>, <em><a class='existingWikiWord' href='/nlab/show/Lectures+on+Equivariant+Stable+Homotopy+Theory'>Lectures on Equivariant Stable Homotopy Theory</a></em></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stefan+Schwede'>Stefan Schwede</a>, <em><a class='existingWikiWord' href='/nlab/show/Lectures+on+Equivariant+Stable+Homotopy+Theory'>Lectures on Equivariant Stable Homotopy Theory</a></em></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Charles+Rezk'>Charles Rezk</a>, <em><a class='existingWikiWord' href='/nlab/show/Global+Homotopy+Theory+and+Cohesion'>Global Homotopy Theory and Cohesion</a></em></p>
+</li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_add84130bd63778db252d95a9b48da91a054028f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_2c2af7032804e906b282223d56b754fa2b979d11_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/orbifold+cohomology'>orbifold cohomology</a></li>
@@ -572,14 +578,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  2, 2018 at 08:29:09.
+  Last revised on September  3, 2018 at 03:56:25.
   See the <a href="https://ncatlab.org/nlab/history/Global homotopy theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Global+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+homotopy+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Global+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Global+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+homotopy+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Global+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Global homotopy theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
