--- a/pages/19617.html
+++ b/pages/19617.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8888/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8888/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="https://ncatlab.org/nlab/author/Luigi%20Alfonsi" title="Overview of nLab pages which Luigi Alfonsi has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
@@ -309,28 +309,44 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <ul>
-<li><a href='https://uk.linkedin.com/in/alfonsiluigi'>webpage</a></li>
+    <ul>
+<li>
+<p><a href='https://www.qmul.ac.uk/spa/people/research-students/profiles/lalfonsi.html'>webpage</a></p>
+</li>
+
+<li>
+<p><a href='https://uk.linkedin.com/in/alfonsiluigi'>Linkedin</a></p>
+</li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_43d58a130f8ef004d2ad5b0529b6f9865e6654a4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='contacts'>Contacts</h2>
+
+<p><a href='mailto:l.alfonsi@qmul.ac.uk'>l.alfonsi@qmul.ac.uk</a></p>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_02163c9ecef8c283cd6405a7a5c8f5f09cbf08b1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/double+field+theory'>double field theory</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/double+field+theory'>double field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+complex+geometry'>generalized complex geometry</a></p>
+</li>
 </ul>
 <div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on August 26, 2018 at 09:01:27.
+  Last revised on September  3, 2018 at 07:44:41.
   See the <a href="https://ncatlab.org/nlab/history/Luigi Alfonsi" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Luigi+Alfonsi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Luigi+Alfonsi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Luigi+Alfonsi/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Luigi+Alfonsi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Luigi+Alfonsi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Luigi Alfonsi/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
