--- a/pages/2943.html
+++ b/pages/2943.html
@@ -1020,7 +1020,7 @@ margin-left: 0em;
 
 <p>It is practically impossible to model a macroscopic system in terms of the microscopic kinematical and dynamical variables of all its particles. Thus one makes a hierarchical reduction in which this complexity is reduced to small number of collective variables. The theoretical framework for such reductions for systems is <a class='existingWikiWord' href='/nlab/show/statistical+mechanics'>statistical mechanics</a> or statistical physics.</p>
 
-<p>One special case of hierarchical reduction is the limit of large volumes <math class='maruku-mathml' display='inline' id='mathml_594f30981a5d1d0f0e12a85c12c460e6ab2d58c9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>, in which the number of particles (of each species) per volume, <math class='maruku-mathml' display='inline' id='mathml_594f30981a5d1d0f0e12a85c12c460e6ab2d58c9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo stretchy='false'>/</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>N/V</annotation></semantics></math>, stays constant. This is called the <strong><a class='existingWikiWord' href='/nlab/show/thermodynamic+limit'>thermodynamic limit</a></strong> in statistical physics. Under some standard assumptions like homogeneity (spacial and possibly directional) and stability (no transitory effects), there is a small number of collective variables characterizing the system. Such a description can be (and historically was) postulated as an independent self-consistent phenomenological theory even without going into the details of statistical mechanics; such a description is called <strong><a class='existingWikiWord' href='/nlab/show/equilibrium'>equilibrium</a> thermodynamics</strong>, which is believed to be deducible from statistical mechanics, as has been partially proved for some classes of systems. Sometimes transitional finite-time phenomena are described either statistically by studying stochastic processes or by a more elaborate hierarchical form of thermodynamics, so-called <strong>nonequilibrium thermodynamics</strong>.</p>
+<p>One special case of hierarchical reduction is the limit of large volumes <math class='maruku-mathml' display='inline' id='mathml_cf2d381f9eb2c492cc848f1419f04d3fbc733682_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>, in which the number of particles (of each species) per volume, <math class='maruku-mathml' display='inline' id='mathml_cf2d381f9eb2c492cc848f1419f04d3fbc733682_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo stretchy='false'>/</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>N/V</annotation></semantics></math>, stays constant. This is called the <strong><a class='existingWikiWord' href='/nlab/show/thermodynamic+limit'>thermodynamic limit</a></strong> in statistical physics. Under some standard assumptions like homogeneity (spacial and possibly directional) and stability (no transitory effects), there is a small number of collective variables characterizing the system. Such a description can be (and historically was) postulated as an independent self-consistent phenomenological theory even without going into the details of statistical mechanics; such a description is called <strong><a class='existingWikiWord' href='/nlab/show/equilibrium'>equilibrium</a> thermodynamics</strong>, which is believed to be deducible from statistical mechanics, as has been partially proved for some classes of systems. Sometimes transitional finite-time phenomena are described either statistically by studying stochastic processes or by a more elaborate hierarchical form of thermodynamics, so-called <strong>nonequilibrium thermodynamics</strong>.</p>
 
 <p>One of the basic characteristics of a thermodynamical system is its <a class='existingWikiWord' href='/nlab/show/temperature'>temperature</a>, which has no analogue in fundamental non-statistical physics. Other common thermodynamical variables include pressure, volume, <a class='existingWikiWord' href='/nlab/show/entropy'>entropy</a>, enthalpy etc.</p>
 
@@ -1055,9 +1055,13 @@ margin-left: 0em;
 <p>Souriau model of thermodynamics has been extented for Geometric Science of Information (Koszul information geometry) with a general definition of Fisher Metric, Euler-Poincaré Equation and variational definition of Souriau Thermodynamics, as given in:</p>
 
 <ul>
-<li><span class='newWikiWord'>Frederic Barbaresco<a href='/nlab/new/Frederic+Barbaresco'>?</a></span>, Koszul Information Geometry and Souriau Geometric, Temperature / Capacity of Lie Group Thermodynamics, MDPI Entropy, n°16, pp. 4521-4565, August 2014. (http://www.mdpi.com/1099-4300/16/8/4521/pdf)</li>
+<li>
+<p>Frederic Barbaresco, Koszul Information Geometry and Souriau Geometric, Temperature / Capacity of Lie Group Thermodynamics, MDPI Entropy, n°16, pp. 4521-4565, August 2014. (http://www.mdpi.com/1099-4300/16/8/4521/pdf)</p>
+</li>
 
-<li><span class='newWikiWord'>Frederic Barbaresco<a href='/nlab/new/Frederic+Barbaresco'>?</a></span>, Symplectic Structure of Information Geometry: Fisher Metric and Euler-Poincaré Equation of Souriau Lie Group Thermodynamics, GSI’15,Vol.9389, Springer LCNS, pp. 529-540, 2015. (http://link.springer.com/chapter/10.1007/978-3-319-25040-3_57)</li>
+<li>
+<p>Frederic Barbaresco, Symplectic Structure of Information Geometry: Fisher Metric and Euler-Poincaré Equation of Souriau Lie Group Thermodynamics, GSI’15,Vol.9389, Springer LCNS, pp. 529-540, 2015. (http://link.springer.com/chapter/10.1007/978-3-319-25040-3_57)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -1109,7 +1113,7 @@ margin-left: 0em;
 <p>A standard textbook has been</p>
 
 <ul>
-<li>Richard Tolman, <em>Relativity, Thermodynamics and Cosmology</em>, Oxford 1934, reprented by Dover 1987</li>
+<li id='Tolman34'>Richard Tolman, <em>Relativity, Thermodynamics and Cosmology</em>, Oxford 1934, reprinted by Dover 1987</li>
 </ul>
 
 <p>but Tolman’s approach has been called into question, see e.g.</p>
@@ -1153,14 +1157,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  3, 2018 at 02:43:52.
+  Last revised on September  3, 2018 at 07:21:19.
   See the <a href="https://ncatlab.org/nlab/history/thermodynamics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/thermodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/thermodynamics/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/thermodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/thermodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/thermodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/thermodynamics/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/thermodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/thermodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/thermodynamics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
