--- a/pages/16201.html
+++ b/pages/16201.html
@@ -1095,7 +1095,7 @@ margin-left: 0em;
 
 <h2 id='idea'>Idea</h2>
 
-<p>In the context of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> (<a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>), <em>higher curvature corrections</em> are modificatiosn of the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> that include not just the linear appearance of the <a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a> <math class='maruku-mathml' display='inline' id='mathml_598becc02f76f1cf15c5d30c244edce178eac594_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> but higher scalar powers of the <a class='existingWikiWord' href='/nlab/show/Riemann+curvature+tensor'>Riemann curvature tensor</a>.</p>
+<p>In the context of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> (<a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>), <em>higher curvature corrections</em> are modificatiosn of the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> that include not just the linear appearance of the <a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a> <math class='maruku-mathml' display='inline' id='mathml_32d3a4e70085a20f2f4c73db22dfddb8ee14651d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> but higher scalar powers of the <a class='existingWikiWord' href='/nlab/show/Riemann+curvature+tensor'>Riemann curvature tensor</a>.</p>
 
 <p>When viewing Einstein-Hilbert <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> as an <a class='existingWikiWord' href='/nlab/show/effective+field+theory'>effective field theory</a> valid at low energy, then higher curvature corrections are precisely the terms that may appear at higher energy in pure gravity. Notably the effective field theories induced by <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> come with infinite towers of higher curvature corrections.</p>
 
@@ -1145,7 +1145,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dimitrios+Tsimpis'>Dimitrios Tsimpis</a>, <em>11D supergravity at <math class='maruku-mathml' display='inline' id='mathml_598becc02f76f1cf15c5d30c244edce178eac594_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo stretchy='false'>(</mo><msup><mi>ℓ</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{O}(\ell^3)</annotation></semantics></math></em>, JHEP0410:046, 2004 (<a href='https://arxiv.org/abs/hep-th/0407271'>arXiv:hep-th/0407271</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Dimitrios+Tsimpis'>Dimitrios Tsimpis</a>, <em>11D supergravity at <math class='maruku-mathml' display='inline' id='mathml_32d3a4e70085a20f2f4c73db22dfddb8ee14651d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo stretchy='false'>(</mo><msup><mi>ℓ</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{O}(\ell^3)</annotation></semantics></math></em>, JHEP0410:046, 2004 (<a href='https://arxiv.org/abs/hep-th/0407271'>arXiv:hep-th/0407271</a>)</p>
 </li>
 
 <li>
@@ -1156,18 +1156,24 @@ margin-left: 0em;
 <p>Anirban Basu, <em>Constraining gravitational interactions in the M theory effective action</em>, Classical and Quantum Gravity, Volume 31, Number 16, 2014 (<a href='https://arxiv.org/abs/1308.2564'>arXiv:1308.2564</a>)</p>
 </li>
 </ul>
+
+<p>and from the <a class='existingWikiWord' href='/nlab/show/ABJM+model'>ABJM model</a>:</p>
+
+<ul>
+<li>Damon J. Binder, Shai M. Chester, Silviu S. Pufu, <em>Absence of <math class='maruku-mathml' display='inline' id='mathml_32d3a4e70085a20f2f4c73db22dfddb8ee14651d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>D</mi> <mn>4</mn></msup><msup><mi>R</mi> <mn>4</mn></msup></mrow><annotation encoding='application/x-tex'>D^4 R^4</annotation></semantics></math> in M-Theory From ABJM</em> (<a href='https://arxiv.org/abs/1808.10554'>arXiv:1808.10554</a>)</li>
+</ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 30, 2018 at 14:23:56.
+  Last revised on September  3, 2018 at 10:18:07.
   See the <a href="https://ncatlab.org/nlab/history/higher curvature correction" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/higher+curvature+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+curvature+correction/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/higher+curvature+correction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+curvature+correction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/higher+curvature+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+curvature+correction/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/higher+curvature+correction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+curvature+correction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/higher curvature correction/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
